// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components | Position / basic Above 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    &lt;Above /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic AboveLeft 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    &lt;AboveLeft /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic AboveRight 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    &lt;AboveRight /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic Below 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    &lt;Below /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic BelowLeft 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    &lt;BelowLeft /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic BelowRight 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    &lt;BelowRight /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic LeftOf 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    &lt;LeftOf /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic RightOf 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    &lt;RightOf /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / custom ref shown element keeps style prop 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    Tooltip is pink
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "color": "#E7558B",
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
  <span
    style={
      Object {
        "color": "white",
        "position": "absolute",
        "top": 250,
      }
    }
  >
    X: 
    -1
    , Y: 
    -1
  </span>,
]
`;

exports[`Storyshots Components | Position / custom style shown element keeps style prop 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    Tooltip is pink
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "color": "#E7558B",
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / custom target Above 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;Above /&gt;
    </div>
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / custom target AboveLeft 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;AboveLeft /&gt;
    </div>
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / custom target AboveRight 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;AboveRight /&gt;
    </div>
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / custom target Below 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;Below /&gt;
    </div>
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / custom target BelowLeft 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;BelowLeft /&gt;
    </div>
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / custom target BelowRight 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;BelowRight /&gt;
    </div>
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / custom target LeftOf 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;LeftOf /&gt;
    </div>
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / custom target RightOf 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;RightOf /&gt;
    </div>
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / in custom portal Above 1`] = `
<div
  data-css-uzbyw8=""
>
  <div
    data-css-5116is=""
  >
    &lt;Above /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Position / in custom portal AboveLeft 1`] = `
<div
  data-css-uzbyw8=""
>
  <div
    data-css-5116is=""
  >
    &lt;AboveLeft /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Position / in custom portal AboveRight 1`] = `
<div
  data-css-uzbyw8=""
>
  <div
    data-css-5116is=""
  >
    &lt;AboveRight /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Position / in custom portal Below 1`] = `
<div
  data-css-uzbyw8=""
>
  <div
    data-css-5116is=""
  >
    &lt;Below /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Position / in custom portal BelowLeft 1`] = `
<div
  data-css-uzbyw8=""
>
  <div
    data-css-5116is=""
  >
    &lt;BelowLeft /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Position / in custom portal BelowRight 1`] = `
<div
  data-css-uzbyw8=""
>
  <div
    data-css-5116is=""
  >
    &lt;BelowRight /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Position / in custom portal LeftOf 1`] = `
<div
  data-css-uzbyw8=""
>
  <div
    data-css-5116is=""
  >
    &lt;LeftOf /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Position / in custom portal RightOf 1`] = `
<div
  data-css-uzbyw8=""
>
  <div
    data-css-5116is=""
  >
    &lt;RightOf /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Position / in scrollable container RightOf 1`] = `
<div
  data-css-1si8iqc=""
>
  <div
    data-css-916a33=""
  />
  <div
    data-css-5116is=""
  >
    target
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
  <div
    data-css-916a33=""
  />
</div>
`;

exports[`Storyshots Position Edge Above 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "grid": "1fr 1fr/ 1fr 1fr",
      "height": "100vh",
      "justifyItems": "start",
      "overflow": "hidden",
      "width": "100%",
    }
  }
>
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "color": "white",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "color": "white",
        "justifySelf": "end",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "alignSelf": "end",
        "color": "white",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "alignSelf": "end",
        "color": "white",
        "justifySelf": "end",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
</div>
`;

exports[`Storyshots Position Edge AboveLeft 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "grid": "1fr 1fr/ 1fr 1fr",
      "height": "100vh",
      "justifyItems": "start",
      "overflow": "hidden",
      "width": "100%",
    }
  }
>
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "color": "white",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "color": "white",
        "justifySelf": "end",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "alignSelf": "end",
        "color": "white",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "alignSelf": "end",
        "color": "white",
        "justifySelf": "end",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
</div>
`;

exports[`Storyshots Position Edge AboveRight 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "grid": "1fr 1fr/ 1fr 1fr",
      "height": "100vh",
      "justifyItems": "start",
      "overflow": "hidden",
      "width": "100%",
    }
  }
>
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "color": "white",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "color": "white",
        "justifySelf": "end",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "alignSelf": "end",
        "color": "white",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "alignSelf": "end",
        "color": "white",
        "justifySelf": "end",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
</div>
`;

exports[`Storyshots Position Edge Below 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "grid": "1fr 1fr/ 1fr 1fr",
      "height": "100vh",
      "justifyItems": "start",
      "overflow": "hidden",
      "width": "100%",
    }
  }
>
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "color": "white",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "color": "white",
        "justifySelf": "end",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "alignSelf": "end",
        "color": "white",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "alignSelf": "end",
        "color": "white",
        "justifySelf": "end",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
</div>
`;

exports[`Storyshots Position Edge BelowLeft 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "grid": "1fr 1fr/ 1fr 1fr",
      "height": "100vh",
      "justifyItems": "start",
      "overflow": "hidden",
      "width": "100%",
    }
  }
>
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "color": "white",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "color": "white",
        "justifySelf": "end",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "alignSelf": "end",
        "color": "white",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "alignSelf": "end",
        "color": "white",
        "justifySelf": "end",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
</div>
`;

exports[`Storyshots Position Edge BelowRight 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "grid": "1fr 1fr/ 1fr 1fr",
      "height": "100vh",
      "justifyItems": "start",
      "overflow": "hidden",
      "width": "100%",
    }
  }
>
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "color": "white",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "color": "white",
        "justifySelf": "end",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "alignSelf": "end",
        "color": "white",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "alignSelf": "end",
        "color": "white",
        "justifySelf": "end",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
</div>
`;

exports[`Storyshots Position Edge LeftOf 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "grid": "1fr 1fr/ 1fr 1fr",
      "height": "100vh",
      "justifyItems": "start",
      "overflow": "hidden",
      "width": "100%",
    }
  }
>
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "color": "white",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "color": "white",
        "justifySelf": "end",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "alignSelf": "end",
        "color": "white",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "alignSelf": "end",
        "color": "white",
        "justifySelf": "end",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
</div>
`;

exports[`Storyshots Position Edge RightOf 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "grid": "1fr 1fr/ 1fr 1fr",
      "height": "100vh",
      "justifyItems": "start",
      "overflow": "hidden",
      "width": "100%",
    }
  }
>
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "color": "white",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "color": "white",
        "justifySelf": "end",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "alignSelf": "end",
        "color": "white",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <div
    data-css-7dab2f=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "alignSelf": "end",
        "color": "white",
        "justifySelf": "end",
      }
    }
  >
    <svg
      aria-label="info icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
</div>
`;

exports[`Storyshots Utilities | Position / position fns above 1`] = `
<div>
  <div
    data-css-5116is=""
  >
    above
  </div>
  <div
    data-css-18t2vqu=""
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    The tip
    <div
      aria-hidden={true}
      data-css-s1sch4=""
    />
  </div>
</div>
`;

exports[`Storyshots Utilities | Position / position fns aboveLeft 1`] = `
<div>
  <div
    data-css-5116is=""
  >
    aboveLeft
  </div>
  <div
    data-css-18t2vqu=""
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    The tip
    <div
      aria-hidden={true}
      data-css-1jxkkwb=""
    />
  </div>
</div>
`;

exports[`Storyshots Utilities | Position / position fns aboveRight 1`] = `
<div>
  <div
    data-css-5116is=""
  >
    aboveRight
  </div>
  <div
    data-css-18t2vqu=""
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    The tip
    <div
      aria-hidden={true}
      data-css-as9lde=""
    />
  </div>
</div>
`;

exports[`Storyshots Utilities | Position / position fns below 1`] = `
<div>
  <div
    data-css-5116is=""
  >
    below
  </div>
  <div
    data-css-18t2vqu=""
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    The tip
    <div
      aria-hidden={true}
      data-css-161cv40=""
    />
  </div>
</div>
`;

exports[`Storyshots Utilities | Position / position fns belowLeft 1`] = `
<div>
  <div
    data-css-5116is=""
  >
    belowLeft
  </div>
  <div
    data-css-18t2vqu=""
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    The tip
    <div
      aria-hidden={true}
      data-css-1oan5ap=""
    />
  </div>
</div>
`;

exports[`Storyshots Utilities | Position / position fns belowRight 1`] = `
<div>
  <div
    data-css-5116is=""
  >
    belowRight
  </div>
  <div
    data-css-18t2vqu=""
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    The tip
    <div
      aria-hidden={true}
      data-css-pnrenl=""
    />
  </div>
</div>
`;

exports[`Storyshots Utilities | Position / position fns leftOf 1`] = `
<div>
  <div
    data-css-5116is=""
  >
    leftOf
  </div>
  <div
    data-css-18t2vqu=""
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    The tip
    <div
      aria-hidden={true}
      data-css-1lnrdce=""
    />
  </div>
</div>
`;

exports[`Storyshots Utilities | Position / position fns rightOf 1`] = `
<div>
  <div
    data-css-5116is=""
  >
    rightOf
  </div>
  <div
    data-css-18t2vqu=""
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    The tip
    <div
      aria-hidden={true}
      data-css-1bzlzco=""
    />
  </div>
</div>
`;
